error
Python 3.7.3 (default, Jan 22 2021, 20:04:44) 
[GCC 8.3.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> for pin in leds + dac + [troyka]: GPIO.setup(pin, GPIO.OUT)
... /bin/python3 /home/b04-406/b04-407/7-1-measure.py
  File "<stdin>", line 2
    /bin/python3 /home/b04-406/b04-407/7-1-measure.py
    ^
SyntaxError: invalid syntax
>>> /bin/python3 /home/b04-406/b04-407/7-1-measure.py
  File "<stdin>", line 1
    /bin/python3 /home/b04-406/b04-407/7-1-measure.py
    ^
SyntaxError: invalid syntax
>>> /bin/python3 /home/b04-406/b04-407/7-1-measure.py
  File "<stdin>", line 1
    /bin/python3 /home/b04-406/b04-407/7-1-measure.py
    ^
SyntaxError: invalid syntax
>>> /bin/python3 /home/b04-406/b04-407/7-1-measure.py
  File "<stdin>", line 1
    /bin/python3 /home/b04-406/b04-407/7-1-measure.py
    ^
SyntaxError: invalid syntax
>>> /bin/python3 /home/b04-406/b04-407/7-1-measure.py
  File "<stdin>", line 1
    /bin/python3 /home/b04-406/b04-407/7-1-measure.py
    ^
SyntaxError: invalid syntax
>>> /bin/python3 /home/b04-406/b04-407/7-1-measure.py
  File "<stdin>", line 1
    /bin/python3 /home/b04-406/b04-407/7-1-measure.py
    ^
SyntaxError: invalid syntax
>>> /bin/python3 /home/b04-406/b04-407/7-1-measure.py
  File "<stdin>", line 1
    /bin/python3 /home/b04-406/b04-407/7-1-measure.py
    ^
SyntaxError: invalid syntax
